--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
+    "@angular/core": "^5.2.9",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-instantsearch": "^1.0.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "instantsearch.js": "^2.7.1",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.3",
+    "npm-install-peers": "^1.2.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
